--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,7 +36,13 @@ a,
 li {
   list-style-type: none;;
 }
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
+  margin: 0;
+  padding: 0;
   font-family: Lato;
   font-size: 1rem;
 }
