lots of hcange i can't even remember so :P

--- a/src/assets/css/themes.css
+++ b/src/assets/css/themes.css
@@ -2,7 +2,7 @@
     --theme-primary: #2d1510;
     --theme-secondary: #E6512F;
     --theme-tertiary: #F28B30;
-    --theme-accent: #E6512F;
+    --theme-accent: #ccc;
     --theme-background: #211d25;
     --theme-text: #FFC033;
 }
