--- a/src/assets/css/themes.css
+++ b/src/assets/css/themes.css
@@ -1,11 +1,19 @@
 :root {
+    --theme-primary: #1c1220;
+    --theme-secondary: #2f2a35;
+    --theme-tertiary: #F28B30;
+    --theme-accent: #ccc;
+    --theme-background: #211d25;
+    --theme-text: wheat;
+}
+/* :root {
     --theme-primary: #2d1510;
     --theme-secondary: #E6512F;
     --theme-tertiary: #F28B30;
     --theme-accent: #ccc;
     --theme-background: #211d25;
     --theme-text: #FFC033;
-}
+} */ 
 
 /* :root {
     --theme-primary: #014034;
@@ -23,4 +31,4 @@
     --theme-accent: #E6512F;
     --theme-background: #211d25;
     --theme-text: #FFC033;
-} */
+}*/
